src/test/ui/traits/trait-object-auto-dedup-in-impl.stderr
warning: duplicate auto trait `std::marker::Send` found in trait object
  --> $DIR/trait-object-auto-dedup-in-impl.rs:13:22
   |
LL | type Send2 = Trait + Send + Send;
   |                      ^^^^   ^^^^ subsequent use of auto trait
   |                      |
   |                      first use of auto trait
   |
   = note: #[warn(duplicate_auto_traits_in_trait_objects)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56522 <https://github.com/rust-lang/rust/issues/56522>

warning: duplicate auto trait `std::marker::Send` found in trait object
  --> $DIR/trait-object-auto-dedup-in-impl.rs:23:14
   |
LL | impl Trait + Send + Send {
   |              ^^^^   ^^^^ subsequent use of auto trait
   |              |
   |              first use of auto trait
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56522 <https://github.com/rust-lang/rust/issues/56522>

error[E0592]: duplicate definitions with name `test`
  --> $DIR/trait-object-auto-dedup-in-impl.rs:20:5
   |
LL |     fn test(&self) { println!("one"); } //~ ERROR duplicate definitions with name `test`
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `test`
...
LL |     fn test(&self) { println!("two"); }
   |     ----------------------------------- other definition for `test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0592`.
